--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,7 @@ rust:
 sudo: required
 
 install:
-  - sudo apt-get install libsdl2-dev
+    # SDL2
+    - curl -O http://www.libsdl.org/release/SDL2-2.0.0.tar.gz
+    - tar -xzvf SDL2-2.0.0.tar.gz
+    - (cd SDL2-2.0.0 && ./configure && make && sudo make install)
