--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: rust
 rust:
   - nightly
 sudo: required
+cache: cargo
 
 install:
     # SDL2
@@ -9,7 +10,9 @@ install:
     - wget https://www.libsdl.org/release/SDL2-2.0.5.tar.gz -O sdl2.tar.gz
     - tar xzf sdl2.tar.gz
     - pushd SDL2-* && ./configure && make && sudo make install && popd
-
 env:
   global:
     - LD_LIBRARY_PATH: "/usr/local/lib"
+
+script:
+  - cargo test --all
