--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ cache: cargo
 install:
     # SDL2
     # https://github.com/AngryLawyer/rust-sdl2/blob/master/.travis.yml
-    - wget https://www.libsdl.org/release/SDL2-2.0.5.tar.gz -O sdl2.tar.gz
+    - wget https://www.libsdl.org/tmp/SDL-2.0.5-10939.tar.gz -O sdl2.tar.gz
     - tar xzf sdl2.tar.gz
     - pushd SDL2-* && ./configure && make && sudo make install && popd
 env:
